2007-03-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -delete]): new method
	that forwards the deletion request to the folder manager.

2007-03-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxAttendeesEditor.m ([UIxAttendeesEditor
	-zoomList]): new method that returns the list of available zoom factors.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor
	-changeStatusAction]): rewrote method.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-_handleAttendeesEdition]): make sure "attendeesNames" has a
	length > 0 before computing the attendees. Otherwise there will be
	an invalid empty entry.
	([UIxComponentEditor -_handleOrganizer]): new method that adds the
	organizer when there are attendees and remove it when the
	attendees are removed.

2007-03-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxAttendeesEditor.m): new component.

	* UI/Scheduler/UIxComponentEditor.m: no longer a superclass for
	the task and appointment editors. Now a container component
	handling the common elements of tasks and events.

	* UI/Scheduler/UIxTaskEditor.m: same as below.

	* UI/Scheduler/UIxAppointmentEditor.m: rewrote template. No longer
	a subclass of UIxComponentEditor but a subcomponent of it.

	* UI/Common/UIxToolbar.m ([UIxToolbar -toolbarConfig]): the
	toolbar can have the special value "none" to indicate there is
	none attached to the window.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -isOrganizer:emailorOwner:login]): new
	method.
	([SOGoCalendarComponent -isParticipant:email]): new method.
	([SOGoCalendarComponent -calendar:create]): takes one parameter
	"create" which is a boolean indicating whether we want to create
	the calendar if it does not exist.

2007-03-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalMonthView.m: changed view to use divs instead
	of a table, the same way the dayly and weekly views have been for